func: base knowledge